attendance_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance-service
  namespace: default
  labels:
    app: attendance-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: attendance-service
  template:
    metadata:
      name: attendance-service
      namespace: default
      labels:
        app: attendance-service
    spec:
      containers:
        - name: attendance-service
          image: "pusti/rso2324-team22-attendance-service:latest"
          ports:
            - containerPort: 8080
              name:  http
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: attendance-service
spec:
  type: LoadBalancer
  selector:
    app: attendance-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
