graylog.yml
apiVersion: v1
kind: Pod
metadata:
  name: graylog
  namespace: default
  labels:
    app: graylog
spec:
  containers:
    - name: mongodb
      image: "mongo:7.0.5"

    - name: elasticsearch
      image: "docker.elastic.co/elasticsearch/elasticsearch:8.11.4"

    - name: graylog
      image: "graylog/graylog:5.2"
      ports:
        - containerPort: 9000
          protocol: TCP
          name: graylog-rest
        - containerPort: 1514
          protocol: TCP
          name: syslog-tcp
        - containerPort: 1514
          protocol: UDP
          name: syslog-udp
        - containerPort: 12201
          protocol: TCP
          name: gelf-tcp
        - containerPort: 12201
          protocol: UDP
          name: gelf-udp

---

apiVersion: v1
kind: Service
metadata:
  name: graylog
spec:
  type: ClusterIP
  selector:
    app: graylog
  ports:
    - name: graylog-rest
      protocol: TCP
      port: 9000
      targetPort: graylog-rest
    - name: syslog-tcp
      protocol: TCP
      port: 1514
      targetPort: syslog-tcp
    - name: syslog-udp
      protocol: UDP
      port: 1514
      targetPort: syslog-udp
    - name: gelf-tcp
      protocol: TCP
      port: 12201
      targetPort: gelf-tcp
    - name: gelf-udp
      protocol: UDP
      port: 12201
      targetPort: gelf-udp
