kafka.yml
apiVersion: v1
kind: Pod
metadata:
  name: kafka
  namespace: default
  labels:
    app: kafka
spec:
  containers:
    - name: kafka
      image: "bitnami/kafka:3.6"
      ports:
        - containerPort: 9092
          name: kafka
      volumeMounts:
        - name: kafka-data
          mountPath: /bitnami/kafka
      lifecycle:
        postStart:
          exec:
            command: ["sh", "-c", "sleep 10; kafka-topics.sh --create --topic members --partitions 3 --bootstrap-server localhost:9092; kafka-topics.sh --create --topic concerts --partitions 3 --bootstrap-server localhost:9092; kafka-topics.sh --create --topic rehearsals --partitions 3 --bootstrap-server localhost:9092; exit 0"]
  volumes:
    - name: kafka-data
      emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: kafka
