members_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: members-service
  namespace: default
  labels:
    app: members-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: members-service
  template:
    metadata:
      name: "members-service"
      namespace: default
      labels:
        app: members-service
    spec:
      containers:
        - name: members-service
          image: "pusti/rso2324-team22-members-service:latest"
          ports:
            - containerPort: 8080
              name:  http
---

apiVersion: v1
kind: Service
metadata:
  name: members-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port_name: "http"
spec:
  type: ClusterIP
  selector:
    app: members-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
