monitoring_graylog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: monitoring
  labels:
    app: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      name: graylog
      namespace: monitoring
      labels:
        app: graylog
    spec:
      containers:
        - name: mongodb
          image: "mongo:7.0.5"
          ports:
            - containerPort: 27017
              protocol: TCP
              name: mongodb
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db

        - name: opensearch
          image: "opensearchproject/opensearch:2"
          volumeMounts:
            - name: opensearch-data
              mountPath: /usr/share/opensearch/data

        - name: graylog
          image: "graylog/graylog:5.2"
          ports:
            - containerPort: 9000
              protocol: TCP
              name: graylog-rest
            - containerPort: 1514
              protocol: TCP
              name: syslog-tcp
            - containerPort: 1514
              protocol: UDP
              name: syslog-udp
            - containerPort: 12201
              protocol: TCP
              name: gelf-tcp
            - containerPort: 12201
              protocol: UDP
              name: gelf-udp

      volumes:
        - name: opensearch-data
          emptyDir: {}
        - name: mongodb-data
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: graylog
  ports:
    - name: graylog-rest
      protocol: TCP
      port: 9000
      targetPort: graylog-rest
    - name: syslog-tcp
      protocol: TCP
      port: 1514
      targetPort: syslog-tcp
    - name: syslog-udp
      protocol: UDP
      port: 1514
      targetPort: syslog-udp
    - name: gelf-tcp
      protocol: TCP
      port: 12201
      targetPort: gelf-tcp
    - name: gelf-udp
      protocol: UDP
      port: 12201
      targetPort: gelf-udp
