monitoring_prometheus.yml

apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  containers:
    - name: prometheus
      image: prom/prometheus
      args:
        - "--storage.tsdb.retention.time=12h"
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--storage.tsdb.path=/prometheus/"
        - "--web.enable-lifecycle"
        - "--web.route-prefix=/"
        - "--web.external-url=http://192.168.49.2/monitoring/prometheus"
      ports:
        - containerPort: 9090
          name: prometheus
      resources:
        requests:
          cpu: 500m
          memory: 500M
        limits:
          cpu: 1
          memory: 1Gi
      volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/
        - name: prometheus-storage-volume
          mountPath: /prometheus/
  volumes:
    - name: prometheus-config-volume
      configMap:
        defaultMode: 420
        name: prometheus-config

    - name: prometheus-storage-volume
      emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port_name: "prometheus"
spec:
    selector:
        app: prometheus
    type: NodePort
    ports:
    - port: 9090
      targetPort: prometheus
