planning_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-service
  namespace: default
  labels:
    app: planning-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: planning-service
  template:
    metadata:
      name: planning-service
      namespace: default
      labels:
        app: planning-service
    spec:
      containers:
        - name: planning-service
          image: "pusti/rso2324-team22-planning-service:latest"
          ports:
            - containerPort: 8080
              name:  http
---

apiVersion: v1
kind: Service
metadata:
  name: planning-service
spec:
  type: LoadBalancer
  selector:
    app: planning-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
