postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgres
      namespace: default
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: "postgres:16.1"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data 
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-data
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: postgres
