resource_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-service
  labels:
    app: resource-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: resource-service
  template:
    metadata:
      name: resource-service
      namespace: default
      labels:
        app: resource-service
    spec:
      containers:
        - name: resource-service
          image: "pusti/rso2324-team22-resource-service:latest"
          ports:
            - containerPort: 8080
              name:  http
          startupProbe:
            httpGet:
              path: /health/startup
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: resource-service
spec:
  type: ClusterIP
  selector:
    app: resource-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
