ingress_azure.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: user-htpasswd
    nginx.ingress.kubernetes.io/auth-realm: "App authentication"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths: 
          - path: "/attendance"
            pathType: Prefix
            backend:
              service:
                name: attendance-service
                port: 
                  name: http
          - path: "/members"
            pathType: Prefix
            backend:
              service:
                name: members-service
                port: 
                  name: http
          - path: "/planning"
            pathType: Prefix
            backend:
              service:
                name: planning-service
                port: 
                  name: http
          - path: "/app"
            pathType: Prefix
            backend:
              service:
                name: webapp
                port: 
                  name: http
