members_service_ingress.Development.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: members-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: true
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths: 
          - path: "/members(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: members-service
                port: 
                  name: http
