monitoring_ingress_azure.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: admin-htpasswd
    nginx.ingress.kubernetes.io/auth-realm: "Monitoring authentication"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths: 
          - path: "/monitoring/graylog(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: graylog
                port: 
                  name: graylog-rest
          - path: "/monitoring/prometheus(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port: 
                  name: prometheus
