planning_service_ingress.Azure.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planning-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths: 
          - path: "/planning"
            pathType: Prefix
            backend:
              service:
                name: planning-service
                port: 
                  name: http
