webapp.Development.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  namespace: default
  labels:
    app: webapp
spec:
  containers:
    - name: webapp
      image: "pusti/rso2324-team22-webapp:latest"
      ports:
        - containerPort: 80
          name:  http
      startupProbe:
        httpGet:
          path: /health/startup
          port: http
        initialDelaySeconds: 10
        periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths: 
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webapp
                port: 
                  name: http
