webapp_ingress.Development.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths: 
          - path: "/app(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: webapp
                port: 
                  name: http
